Release 1.7.0 (#1)
* New release 1.7.0

* Clean old dirs